# sentient_ai

./: .gitignore  CMakeLists.txt
config/: sentient_ai.h.in
src/: main.cpp
